--- a/package.json
+++ b/package.json
@@ -2,12 +2,78 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "clean": "rimraf public/build",
         "dev": "vite",
-        "build": "vite build"
+        "build": "npm run clean && vite build",
+        "build-rtl": "rtlcss public/build/css/app.min.css & rtlcss public/build/css/bootstrap.min.css"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
+        "fs-extra": "^11.1.1",
         "laravel-vite-plugin": "^0.8.0",
-        "vite": "^4.0.0"
+        "sass": "^1.56.1",
+        "vite": "^4.0.0",
+        "vite-plugin-static-copy": "^0.17.0",
+        "rimraf": "^5.0.1",
+        "sass-loader": "^11.0.1",
+        "postcss": "^8.3.5",
+        "postcss-import": "^14.0.1",
+        "resolve-url-loader": "^3.1.0",
+        "rtlcss": "^3.0.0",
+        "browser-sync": "^2.27.7",
+        "lodash": "^4.17.19",
+        "popper.js": "^1.12"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^38.0.1",
+        "@simonwep/pickr": "^1.8.2",
+        "@tarekraafat/autocomplete.js": "^10.2.7",
+        "aos": "^2.3.4",
+        "apexcharts": "^3.41.0",
+        "bootstrap": "5.3.0",
+        "card": "^2.5.4",
+        "chart.js": "4.3.0",
+        "choices.js": "^10.2.0",
+        "cleave.js": "^1.6.0",
+        "dom-autoscroller": "^2.3.4",
+        "dragula": "^3.7.3",
+        "dropzone": "^6.0.0-beta.2",
+        "echarts": "^5.4.2",
+        "feather-icons": "^4.29.0",
+        "fg-emoji-picker": "^1.0.1",
+        "filepond": "^4.30.4",
+        "filepond-plugin-file-encode": "^2.1.10",
+        "filepond-plugin-file-validate-size": "^2.2.8",
+        "filepond-plugin-image-exif-orientation": "^1.0.11",
+        "filepond-plugin-image-preview": "^4.6.11",
+        "flatpickr": "^4.6.13",
+        "fs": "^0.0.1-security",
+        "fullcalendar": "^6.1.8",
+        "glightbox": "^3.2.0",
+        "gmaps": "^0.4.25",
+        "gridjs": "^6.0.6",
+        "isotope-layout": "^3.0.6",
+        "jsvectormap": "1.4.2",
+        "leaflet": "^1.9.4",
+        "list.js": "^2.3.1",
+        "list.pagination.js": "^0.1.1",
+        "masonry-layout": "^4.2.2",
+        "moment": "2.24.0",
+        "multi.js": "^0.5.3",
+        "node-waves": "^0.7.6",
+        "nouislider": "^15.7.0",
+        "particles.js": "^2.0.0",
+        "prismjs": "^1.29.0",
+        "quill": "^1.3.7",
+        "rater-js": "^1.0.1",
+        "shepherd.js": "^11.1.1",
+        "simplebar": "^6.2.5",
+        "sortablejs": "^1.15.0",
+        "sweetalert2": "^11.7.12",
+        "swiper": "^9.3.2",
+        "toastify-js": "^1.12.0",
+        "wnumb": "^1.2.0"
     }
 }
